--- a/TableViewDescriptorExample/TableViewDescriptorExample/Base.lproj/Main.storyboard
+++ b/TableViewDescriptorExample/TableViewDescriptorExample/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="fMb-ag-kdc">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="fMb-ag-kdc">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -47,6 +47,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fMb-ag-kdc" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="HMA-Cn-6kx"/>
+                            <constraint firstItem="fMb-ag-kdc" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="-64" id="fHt-tu-na3"/>
+                            <constraint firstAttribute="trailing" secondItem="fMb-ag-kdc" secondAttribute="trailing" id="tIl-Zr-lN5"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="fMb-ag-kdc" secondAttribute="bottom" id="uSW-oW-LAe"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="cPY-FY-lPl"/>
                     <connections>
@@ -70,12 +76,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="2JC-L6-rIP">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="2JC-L6-rIP">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2JC-L6-rIP" firstAttribute="top" secondItem="Pl2-2v-xui" secondAttribute="bottom" constant="-64" id="H7v-6t-Y6d"/>
+                            <constraint firstItem="2JC-L6-rIP" firstAttribute="leading" secondItem="e1Y-YI-YJo" secondAttribute="leading" id="KuK-vB-Nxf"/>
+                            <constraint firstAttribute="trailing" secondItem="2JC-L6-rIP" secondAttribute="trailing" id="QYw-Uq-M0y"/>
+                            <constraint firstItem="Nt3-oi-AVW" firstAttribute="top" secondItem="2JC-L6-rIP" secondAttribute="bottom" id="jSr-dG-uXb"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="2JC-L6-rIP" id="hSX-ns-Obr"/>
